--- a/index_univ.html
+++ b/index_univ.html
@@ -374,7 +374,7 @@
                     <td>대학 재학생 맞춤형 고용서비스</td>
                     <td>참여신청서</td>
                     <td>상담이력(점프업)</td>
-                    <td>점프업 - 상담이력_목록있음</td>
+                    <td>점프업 - 상담이력_목록</td>
                     <td>UI_ADHPCcM02</td>
                     <td class="status">PC완료</td>
                     <td></td>
@@ -609,7 +609,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCgM01-1.html" target="_blank">PC-1</a>
-                        <a href="./pc/UI_ADHPCgM01 -2.html" target="_blank">PC-2</a>
+                        <a href="./pc/UI_ADHPCgM01-2.html" target="_blank">PC-2</a>
                     </td>
                 </tr>
                 <tr>
