--- a/pc/UI_ADHPCbP03.html
+++ b/pc/UI_ADHPCbP03.html
@@ -56,7 +56,7 @@
         <script src="../pc/js/contents.js"></script>
 
         <!-- 팝업내용 시작 -->
-        <section id="operPrgmPopup" class="new_popup allcare_popup h-auto" role="dialog" aria-modal="true" aria-labelledby="operPrgmPopupTitle">
+        <section id="operPrgmPopup" class="new_popup allcare_popup h-auto mx-w800" role="dialog" aria-modal="true" aria-labelledby="operPrgmPopupTitle">
             <header class="head type2 newpop_tit mr0">
                 <h1 id="operPrgmPopupTitle" class="h2_sb">참여신청서 정보 불러오기</h1>
                 <!-- 닫기 -->
