--- a/pc/UI_ADHPCcM01-1.html
+++ b/pc/UI_ADHPCcM01-1.html
@@ -84,7 +84,7 @@
                                                 <!-- table -->
                                                 
                                                 <table class="box_table auto-count new_table">
-                                                    <caption>상담회차, 참여유형, 상담방법 및 시간, 상담유형 및 일시, 자기상담 유형 및 일시, 상담사명 을(를) 제공하는 표</caption>
+                                                    <caption>상담회차, 참여유형, 상담방법 및 시간, 상담유형 및 일시, 차기상담 유형 및 일시, 상담사명 을(를) 제공하는 표</caption>
                                                     <colgroup>
                                                         <col style="width: 102px">
                                                         <col style="width: 102px">
@@ -99,13 +99,13 @@
                                                             <th scope="col" rowspan="2">참여유형</th>
                                                             <th scope="col" >상담방법</th>
                                                             <th scope="col">상담유형</th>
-                                                            <th scope="col">자기상담유형</th>
+                                                            <th scope="col">차기상담유형</th>
                                                             <th scope="col" rowspan="2">상담사명</th>
                                                         </tr>
                                                         <tr>
                                                             <th scope="col">상담시간</th>
                                                             <th scope="col">상담일시</th>
-                                                            <th scope="col">자기상담일시</th>
+                                                            <th scope="col">차기상담일시</th>
                                                         </tr>
                                                     </thead>
                                                     <tbody>
@@ -159,9 +159,6 @@
                                                 <div class="section_bottom"></div>
                                             </div> 
                                         
-                                            <div class="box_btn_wrap ml_auto mt40 flex_js_r">
-                                                <a href="#" class="btn big type01 fill">신청서 작성</a>
-                                            </div>
                                         </div>
 
                                     </div>
