--- a/pc/UI_ADHPCcM02-1.html
+++ b/pc/UI_ADHPCcM02-1.html
@@ -73,7 +73,7 @@
                                             <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>참여신청서</span></button></li>
                                             <li aria-controls="" class="active"><button type="button" role="tab" aria-selected="true"><span>상담이력</span></button></li>
                                             <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>취업준비도검사</span></button></li>
-                                            <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>IAP계획관리</span></button></li>
+                                            <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>IAP관리</span></button></li>
                                             <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>IAP결과관리</span></button></li>
                                             <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>포인트신청관리</span></button></li>
                                         </ul>
@@ -87,10 +87,10 @@
                                                 <!-- table -->
                                                 
                                                 <table class="box_table auto-count new_table">
-                                                    <caption>상담회차, 참여유형, 상담방법 및 시간, 상담유형 및 일시, 자기상담 유형 및 일시, 상담사명 을(를) 제공하는 표</caption>
+                                                    <caption>상담회차, 참여유형, 상담방법 및 시간, 상담유형 및 일시, 차기상담 유형 및 일시, 상담사명 을(를) 제공하는 표</caption>
                                                     <colgroup>
                                                         <col style="width: 102px">
-                                                        <col style="width: 102px">
+                                                        <col style="width: 120px">
                                                         <col style="width: 120px">
                                                         <col style="width: 257px">
                                                         <col style="width: 267px">
@@ -102,13 +102,13 @@
                                                             <th scope="col" rowspan="2">참여유형</th>
                                                             <th scope="col" >상담방법</th>
                                                             <th scope="col">상담유형</th>
-                                                            <th scope="col">자기상담유형</th>
+                                                            <th scope="col">차기상담유형</th>
                                                             <th scope="col" rowspan="2">상담사명</th>
                                                         </tr>
                                                         <tr>
                                                             <th scope="col">상담시간</th>
                                                             <th scope="col">상담일시</th>
-                                                            <th scope="col">자기상담일시</th>
+                                                            <th scope="col">차기상담일시</th>
                                                         </tr>
                                                     </thead>
                                                     <tbody>
