--- a/pc/UI_ADHPCcM02-2.html
+++ b/pc/UI_ADHPCcM02-2.html
@@ -73,7 +73,7 @@
                                             <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>참여신청서</span></button></li>
                                             <li aria-controls="" class="active"><button type="button" role="tab" aria-selected="true"><span>상담이력</span></button></li>
                                             <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>취업준비도검사</span></button></li>
-                                            <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>IAP계획관리</span></button></li>
+                                            <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>IAP관리</span></button></li>
                                             <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>IAP결과관리</span></button></li>
                                             <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>포인트신청관리</span></button></li>
                                         </ul>
