--- a/pc/UI_ADHPCdS02.html
+++ b/pc/UI_ADHPCdS02.html
@@ -125,7 +125,7 @@
                                                                 <td>
                                                                     <div class="text_form_box">
                                                                         <div class="text_form_inner">
-                                                                            <textarea id="" name="interestArea" maxlength="1000" aria-describedby="interestHelp interestCount" placeholder="관심 분야 및 활동을 입력해 주세요."></textarea>
+                                                                            <textarea title="나의 관심분야 및 활동 입력란" placeholder="관심 분야 및 활동을 입력해 주세요."></textarea>
                                                                         </div>
                                                                         <div class="text_info">
                                                                             <p class="sr_only" id="interestHelp">최대 1,000 Byte까지 입력 가능합니다.</p>
@@ -139,7 +139,7 @@
                                                                 <td>
                                                                     <div class="text_form_box">
                                                                         <div class="text_form_inner">
-                                                                            <textarea id="" name="meritArea" maxlength="1000" aria-describedby="meritHelp meritCount" placeholder="나의 강점(장점)을 입력해 주세요."></textarea>
+                                                                            <textarea title="나의 강점(장점) 입력란" placeholder="나의 강점(장점)을 입력해 주세요."></textarea>
                                                                         </div>
                                                                         <div class="text_info">
                                                                             <p class="sr_only" id="meritHelp">최대 1,000 Byte까지 입력 가능합니다.</p>
@@ -281,7 +281,7 @@
                                                                         </div>
                                                                         <div class="text_form_box">
                                                                             <div class="text_form_inner">
-                                                                                <textarea name="shortPlanArea" maxlength="1000" aria-describedby="shortPlanHelp1 shortPlanCount1" placeholder="목표 활동을 입력해 주세요."></textarea>
+                                                                                <textarea title="단기계획 목표활동 입력란" aria-describedby="shortPlanHelp1 shortPlanCount1" placeholder="목표 활동을 입력해 주세요."></textarea>
                                                                             </div>
                                                                             <div class="text_info">
                                                                                 <p class="sr_only" id="shortPlanHelp1">최대 200 Byte까지 입력 가능합니다.</p>
@@ -369,7 +369,7 @@
                                                                         </div>
                                                                         <div class="text_form_box">
                                                                             <div class="text_form_inner">
-                                                                                <textarea name="longPlanArea" maxlength="1000" aria-describedby="longPlanHelp1 longPlanCount1" placeholder="목표 활동을 입력해 주세요."></textarea>
+                                                                                <textarea title="장기계획 목표활동 입력란" aria-describedby="longPlanHelp1 longPlanCount1" placeholder="목표 활동을 입력해 주세요."></textarea>
                                                                             </div>
                                                                             <div class="text_info">
                                                                                 <p class="sr_only" id="longPlanHelp1">최대 200 Byte까지 입력 가능합니다.</p>
@@ -456,7 +456,7 @@
                                                                         </div>
                                                                         <div class="text_form_box">
                                                                             <div class="text_form_inner">
-                                                                                <textarea name="shortPlanArea" maxlength="1000" aria-describedby="shortPlanHelp2 shortPlanCount2" placeholder="목표 활동을 입력해 주세요."></textarea>
+                                                                                <textarea title="단기계획 목표활동 입력란" aria-describedby="shortPlanHelp2 shortPlanCount2" placeholder="목표 활동을 입력해 주세요."></textarea>
                                                                             </div>
                                                                             <div class="text_info">
                                                                                 <p class="sr_only" id="shortPlanHelp2">최대 200 Byte까지 입력 가능합니다.</p>
@@ -532,7 +532,7 @@
                                                                         </div>
                                                                         <div class="text_form_box">
                                                                             <div class="text_form_inner">
-                                                                                <textarea name="shortPlanArea" maxlength="1000" aria-describedby="shortPlanHelp3 shortPlanCount3" placeholder="목표 활동을 입력해 주세요."></textarea>
+                                                                                <textarea title="장기계획 목표활동 입력란" aria-describedby="shortPlanHelp3 shortPlanCount3" placeholder="목표 활동을 입력해 주세요."></textarea>
                                                                             </div>
                                                                             <div class="text_info">
                                                                                 <p class="sr_only" id="shortPlanHelp3">최대 200 Byte까지 입력 가능합니다.</p>
@@ -608,7 +608,7 @@
                                                                         </div>
                                                                         <div class="text_form_box">
                                                                             <div class="text_form_inner">
-                                                                                <textarea name="shortPlanArea" maxlength="1000" aria-describedby="shortPlanHelp4 shortPlanCount4" placeholder="목표 활동을 입력해 주세요."></textarea>
+                                                                                <textarea title="단기계획 목표활동 입력란" aria-describedby="shortPlanHelp4 shortPlanCount4" placeholder="목표 활동을 입력해 주세요."></textarea>
                                                                             </div>
                                                                             <div class="text_info">
                                                                                 <p class="sr_only" id="shortPlanHelp4">최대 200 Byte까지 입력 가능합니다.</p>
@@ -701,7 +701,7 @@
                                                                         </div>
                                                                         <div class="text_form_box">
                                                                             <div class="text_form_inner">
-                                                                                <textarea name="longPlanArea" maxlength="1000" aria-describedby="longPlanHelp2 longPlanCount2" placeholder="목표 활동을 입력해 주세요."></textarea>
+                                                                                <textarea title="장기계획 목표활동 입력란" aria-describedby="longPlanHelp2 longPlanCount2" placeholder="목표 활동을 입력해 주세요."></textarea>
                                                                             </div>
                                                                             <div class="text_info">
                                                                                 <p class="sr_only" id="longPlanHelp2">최대 200 Byte까지 입력 가능합니다.</p>
@@ -741,7 +741,7 @@
                                                                     <td>
                                                                         <div class="text_form_box">
                                                                             <div class="text_form_inner">
-                                                                                <textarea name="promiseArea" maxlength="1000" aria-describedby="promiseHelp2 promiseCount2" placeholder="나의 다짐을 입력해 주세요."></textarea>
+                                                                                <textarea title="나의다짐 입력란"  aria-describedby="promiseHelp2 promiseCount2" placeholder="나의 다짐을 입력해 주세요."></textarea>
                                                                             </div>
                                                                             <div class="text_info">
                                                                                 <p class="sr_only" id="promiseHelp2">최대 1,000 Byte까지 입력 가능합니다.</p>
