--- a/pc/UI_ADHPCfS02.html
+++ b/pc/UI_ADHPCfS02.html
@@ -561,7 +561,7 @@
                                                                 <td colspan="3">
                                                                     <div class="text_form_box">
                                                                         <div class="text_form_inner">
-                                                                            <textarea id="" name="interestArea" maxlength="1000" aria-describedby="interestHelp interestCount" placeholder="세부활동 내용을 작성해 주세요."></textarea>
+                                                                            <textarea placeholder="세부활동 내용을 작성해 주세요."></textarea>
                                                                         </div>
                                                                         <div class="text_info">
                                                                             <p class="sr_only" id="interestHelp">최대 1,000 Byte까지 입력 가능합니다.</p>
@@ -695,7 +695,7 @@
                                                                 <td colspan="3">
                                                                     <div class="text_form_box">
                                                                         <div class="text_form_inner">
-                                                                            <textarea id="" name="interestArea" maxlength="1000" aria-describedby="interestHelp interestCount" placeholder="세부활동 내용을 작성해 주세요."></textarea>
+                                                                            <textarea placeholder="세부활동 내용을 작성해 주세요."></textarea>
                                                                         </div>
                                                                         <div class="text_info">
                                                                             <p class="sr_only" id="interestHelp">최대 1,000 Byte까지 입력 가능합니다.</p>
@@ -829,7 +829,7 @@
                                                                 <td colspan="3">
                                                                     <div class="text_form_box">
                                                                         <div class="text_form_inner">
-                                                                            <textarea id="" name="interestArea" maxlength="1000" aria-describedby="interestHelp interestCount" placeholder="세부활동 내용을 작성해 주세요."></textarea>
+                                                                            <textarea placeholder="세부활동 내용을 작성해 주세요."></textarea>
                                                                         </div>
                                                                         <div class="text_info">
                                                                             <p class="sr_only" id="interestHelp">최대 1,000 Byte까지 입력 가능합니다.</p>
