--- a/pc/UI_ADHPCbM09.html
+++ b/pc/UI_ADHPCbM09.html
@@ -235,7 +235,7 @@
 
 
                                             <div class="box_group_wrap">
-                                                <h3 class="t2_sb hreq_mark">사업참여기간</h3>
+                                                <h3 class="t2_sb">사업참여기간</h3>
                                                 <div class="box_table_wrap write type01">
                                                     <table class="box_table">
                                                         <caption>참여기간 시작일, 참여기간 종료일 을(를) 제공하는 표</caption>
