--- a/pc/UI_ADHPCdS03.html
+++ b/pc/UI_ADHPCdS03.html
@@ -125,7 +125,7 @@
                                                                 <td>
                                                                     <div class="text_form_box">
                                                                         <div class="text_form_inner">
-                                                                            <textarea id="" name="interestArea" maxlength="1000" aria-describedby="interestHelp interestCount" placeholder="관심 분야 및 활동을 입력해 주세요.">입력한 관심분야 및 활동 내용</textarea>
+                                                                            <textarea placeholder="관심 분야 및 활동을 입력해 주세요.">입력한 관심분야 및 활동 내용</textarea>
                                                                         </div>
                                                                         <div class="text_info">
                                                                             <p class="sr_only" id="interestHelp">최대 1,000 Byte까지 입력 가능합니다.</p>
@@ -139,7 +139,7 @@
                                                                 <td>
                                                                     <div class="text_form_box">
                                                                         <div class="text_form_inner">
-                                                                            <textarea id="" name="meritArea" maxlength="1000" aria-describedby="meritHelp meritCount" placeholder="나의 강점(장점)을 입력해 주세요.">입력한 강점(장점)내용</textarea>
+                                                                            <textarea  placeholder="나의 강점(장점)을 입력해 주세요.">입력한 강점(장점)내용</textarea>
                                                                         </div>
                                                                         <div class="text_info">
                                                                             <p class="sr_only" id="meritHelp">최대 1,000 Byte까지 입력 가능합니다.</p>
@@ -586,7 +586,7 @@
                                                                     <td>
                                                                         <div class="text_form_box">
                                                                             <div class="text_form_inner">
-                                                                                <textarea name="promiseArea" maxlength="1000" aria-describedby="promiseHelp2 promiseCount2" placeholder="나의 다짐을 입력해 주세요.">입력한 다짐 내용</textarea>
+                                                                                <textarea  aria-describedby="promiseHelp2 promiseCount2" placeholder="나의 다짐을 입력해 주세요.">입력한 다짐 내용</textarea>
                                                                             </div>
                                                                             <div class="text_info">
                                                                                 <p class="sr_only" id="promiseHelp2">최대 1,000 Byte까지 입력 가능합니다.</p>
