--- a/pc/UI_ADHPCdS05.html
+++ b/pc/UI_ADHPCdS05.html
@@ -136,7 +136,7 @@
                                                                 <td>
                                                                     <div class="text_form_box">
                                                                         <div class="text_form_inner">
-                                                                            <textarea id="" name="meritArea" maxlength="1000" aria-describedby="meritHelp meritCount" placeholder="나의 강점(장점)을 입력해 주세요.">첫째, 언어학에 대한 깊은 관심과 열정입니다. 이 분야에 대한 호기심은 학문적인 성취뿐만 아니라, 다양한 언어와 문화에 대한 이해를 확장하는 데 큰 도움이 됩니다. 언어의 구조와 사용 방식, 사회적 맥락을 탐구하며, 이를 통해 사고의 깊이를 더하고 있습니다. 둘째, 비판적 사고 능력입니다. 다양한 과목을 수강하고, 동아리 활동을 통해 여러 시각에서 주제를 분석하는 경험을 쌓았습니다. 이는 문제 해결 능력을 향상시키고, 복잡한 상황에서도 논리적으로 접근할 수 있는 능력을 키우는 데 기여합니다. 셋째, 협업 능력입니다. 동아리 활동을 통해 다른 학생들과의 소통과 협업을 경험하며, 팀워크의 중요성을 깨달았습니다. 서로 다른 의견을 존중하고 조율하는 과정에서 리더십과 소통 능력을 발전시켰습니다. 넷째, 다국어 능력 향상에 대한 노력입니다. 영어와 한국어 외에도 스페인어를 배우며, 언어 간의 차이를 이해하고 이를 통해 문화적 배경을 넓히고 있습니다. 이는 글로벌 환경에서 경쟁력을 높이는 데 큰 장점이 됩니다. 마지막으로, 사회에 기여하고자 하는 의지입니다. 언어학을 통해 얻은 지식을 바탕으로 언어 교육이나 번역 분야에서 활동하며, 문화 간의 이해를 증진시키겠다는 목표는 매우 의미 있는 비전입니다. 이는 미래의 전문성을 더욱 강화하고, 다양한 사람들과의 소통을 원활하게 만들어 줄 것입니다.</textarea>
+                                                                            <textarea  placeholder="나의 강점(장점)을 입력해 주세요.">첫째, 언어학에 대한 깊은 관심과 열정입니다. 이 분야에 대한 호기심은 학문적인 성취뿐만 아니라, 다양한 언어와 문화에 대한 이해를 확장하는 데 큰 도움이 됩니다. 언어의 구조와 사용 방식, 사회적 맥락을 탐구하며, 이를 통해 사고의 깊이를 더하고 있습니다. 둘째, 비판적 사고 능력입니다. 다양한 과목을 수강하고, 동아리 활동을 통해 여러 시각에서 주제를 분석하는 경험을 쌓았습니다. 이는 문제 해결 능력을 향상시키고, 복잡한 상황에서도 논리적으로 접근할 수 있는 능력을 키우는 데 기여합니다. 셋째, 협업 능력입니다. 동아리 활동을 통해 다른 학생들과의 소통과 협업을 경험하며, 팀워크의 중요성을 깨달았습니다. 서로 다른 의견을 존중하고 조율하는 과정에서 리더십과 소통 능력을 발전시켰습니다. 넷째, 다국어 능력 향상에 대한 노력입니다. 영어와 한국어 외에도 스페인어를 배우며, 언어 간의 차이를 이해하고 이를 통해 문화적 배경을 넓히고 있습니다. 이는 글로벌 환경에서 경쟁력을 높이는 데 큰 장점이 됩니다. 마지막으로, 사회에 기여하고자 하는 의지입니다. 언어학을 통해 얻은 지식을 바탕으로 언어 교육이나 번역 분야에서 활동하며, 문화 간의 이해를 증진시키겠다는 목표는 매우 의미 있는 비전입니다. 이는 미래의 전문성을 더욱 강화하고, 다양한 사람들과의 소통을 원활하게 만들어 줄 것입니다.</textarea>
                                                                         </div>
                                                                         <div class="text_info">
                                                                             <p class="sr_only" id="meritHelp">최대 1,000 Byte까지 입력 가능합니다.</p>
@@ -582,7 +582,7 @@
                                                                     <td>
                                                                         <div class="text_form_box">
                                                                             <div class="text_form_inner">
-                                                                                <textarea name="promiseArea" maxlength="1000" aria-describedby="promiseHelp2 promiseCount2" placeholder="나의 다짐을 입력해 주세요.">입력한 다짐내용</textarea>
+                                                                                <textarea  aria-describedby="promiseHelp2 promiseCount2" placeholder="나의 다짐을 입력해 주세요.">입력한 다짐내용</textarea>
                                                                             </div>
                                                                             <div class="text_info">
                                                                                 <p class="sr_only" id="promiseHelp2">최대 1,000 Byte까지 입력 가능합니다.</p>
