--- a/pc/UI_ADHPCeM01.html
+++ b/pc/UI_ADHPCeM01.html
@@ -73,7 +73,7 @@
                                             <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>참여신청서</span></button></li>
                                             <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>상담이력</span></button></li>
                                             <li aria-controls="" class="active"><button type="button" role="tab" aria-selected="true"><span>취업준비도검사</span></button></li>
-                                            <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>IAP계획관리</span></button></li>
+                                            <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>IAP관리</span></button></li>
                                             <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>IAP결과관리</span></button></li>
                                             <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>포인트신청관리</span></button></li>
                                         </ul>
@@ -125,30 +125,6 @@
                                                             <td>2025-01-01</td>
                                                             <td><button type="button" class="inner_btn fill"><span>취업준비 진단 진행하기</span></button></td>
                                                         </tr>
-                                                        <tr>
-                                                            <td>3</td>
-                                                            <td>취업준비도검사 3차</td>
-                                                            <td>예</td>
-                                                            <td>아니오</td>
-                                                            <td>2025-01-01</td>
-                                                            <td><button type="button" class="inner_btn"><span>취업준비 진단 결과조회</span></button></td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td>4</td>
-                                                            <td>취업준비도검사 4차</td>
-                                                            <td>예</td>
-                                                            <td>아니오</td>
-                                                            <td>2025-01-01</td>
-                                                            <td><button type="button" class="inner_btn"><span>취업준비 진단 결과조회</span></button></td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td>5</td>
-                                                            <td>취업준비도검사 5차</td>
-                                                            <td>예</td>
-                                                            <td>아니오</td>
-                                                            <td>2025-01-01</td>
-                                                            <td><button type="button" class="inner_btn"><span>취업준비 진단 결과조회</span></button></td>
-                                                        </tr>
 
                                                         
 
@@ -157,7 +133,6 @@
                                                     </tbody>
                                                 </table>
                                                 <p class="info_txt s1_r">※ 취업준비도 검사 2차는 ① 취업준비도검사 1차 작성 ② IAP 70% 달성 후 작성하실 수 있습니다.</p>
-                                                <div class="section_bottom"></div>
                                             </div> 
                                         </div>
 
