--- a/pc/UI_ADHPCeS03.html
+++ b/pc/UI_ADHPCeS03.html
@@ -45,7 +45,7 @@
 
                             <!-- 콘텐츠 타이틀 -->
                             <div class="sub_tl">
-                                <h2 class="h2_sb">졸업생 특화프로그램</h2>
+                                <h2 class="h2_sb">대학 재학생 맞춤형 고용서비스</h2>
                             </div>
                             <!-- 콘텐츠영역 시작 -->
                             <div class="tab_wrap bg_type" data-role="tab">
@@ -56,7 +56,7 @@
                                             <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>참여신청서</span></button></li>
                                             <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>상담이력</span></button></li>
                                             <li aria-controls="" class="active"><button type="button" role="tab" aria-selected="true"><span>취업준비도검사</span></button></li>
-                                            <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>IAP계획관리</span></button></li>
+                                            <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>IAP관리</span></button></li>
                                             <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>IAP결과관리</span></button></li>
                                             <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>포인트신청관리</span></button></li>
                                         </ul>
