--- a/pc/UI_ADHPChS05.html
+++ b/pc/UI_ADHPChS05.html
@@ -289,7 +289,7 @@
                                                                             <td>
                                                                                 <div class="text_form_box">
                                                                                     <div class="text_form_inner">
-                                                                                        <textarea id="" name="interestArea" maxlength="1000" aria-describedby="interestHelp interestCount" placeholder="프로그램 이행 내용을 입력해주세요."></textarea>
+                                                                                        <textarea placeholder="프로그램 이행 내용을 입력해주세요."></textarea>
                                                                                     </div>
                                                                                     <div class="text_info">
                                                                                         <p class="sr_only" id="interestHelp">최대 300 Byte까지 입력 가능합니다.</p>
@@ -303,7 +303,7 @@
                                                                             <td>
                                                                                 <div class="text_form_box">
                                                                                     <div class="text_form_inner">
-                                                                                        <textarea id="" name="interestArea" maxlength="1000" aria-describedby="interestHelp interestCount" placeholder="비고 내용을 작성해 주세요."></textarea>
+                                                                                        <textarea placeholder="비고 내용을 작성해 주세요."></textarea>
                                                                                     </div>
                                                                                     <div class="text_info">
                                                                                         <p class="sr_only" id="interestHelp">최대 150 Byte까지 입력 가능합니다.</p>
@@ -439,7 +439,7 @@
                                                                             <td>
                                                                                 <div class="text_form_box">
                                                                                     <div class="text_form_inner">
-                                                                                        <textarea id="" name="interestArea" maxlength="1000" aria-describedby="interestHelp interestCount" placeholder="프로그램 이행 내용을 입력해주세요."></textarea>
+                                                                                        <textarea placeholder="프로그램 이행 내용을 입력해주세요."></textarea>
                                                                                     </div>
                                                                                     <div class="text_info">
                                                                                         <p class="sr_only" id="interestHelp">최대 300 Byte까지 입력 가능합니다.</p>
@@ -453,7 +453,7 @@
                                                                             <td>
                                                                                 <div class="text_form_box">
                                                                                     <div class="text_form_inner">
-                                                                                        <textarea id="" name="interestArea" maxlength="1000" aria-describedby="interestHelp interestCount" placeholder="비고 내용을 작성해 주세요."></textarea>
+                                                                                        <textarea placeholder="비고 내용을 작성해 주세요."></textarea>
                                                                                     </div>
                                                                                     <div class="text_info">
                                                                                         <p class="sr_only" id="interestHelp">최대 150 Byte까지 입력 가능합니다.</p>
