--- a/pc/02_UI_ADHPAaM02.html
+++ b/pc/02_UI_ADHPAaM02.html
@@ -130,7 +130,7 @@
                                             <div class="uniporg_cont">
                                                 <h3 class="t2_sb m-b16">운영 대학 및 프로그램</h3>
                                                 <article class="box_form_content">
-                                                    <form id="searchFrm" name="searchFrm" action="jobPsyExamList.do" method="post" class="reset_area">
+                                                    <div id="searchFrm" name="searchFrm" action="jobPsyExamList.do" method="post" class="reset_area">
                                                         <input type="hidden" id="pageIndex" name="pageIndex" value="1">
                                                         <input type="hidden" id="pageUnit" name="pageUnit" value="6">
                                                         <table class="search_table">
@@ -235,7 +235,7 @@
                                                             <button type="button" id="btnClean" class="btn medium type01 reset newbtn_reset newbtn_w88">초기화</button>
                                                             <button type="submit" id="srchBtn" class="btn medium fill type01 newbtn_w60">검색</button>
                                                         </div>
-                                                    </form>
+                                                    </div>
                                                 </article>
 
 
