--- a/pc/14_UI_ADHPAcM02.html
+++ b/pc/14_UI_ADHPAcM02.html
@@ -75,7 +75,7 @@
 
                                         <div class="pa_page_inner uni_prog_tool">
                                             <article class="box_form_content">
-                                                <form id="searchFrm" name="searchFrm" action="jobPsyExamList.do" method="post" class="reset_area">
+                                                <div id="searchFrm" name="searchFrm" action="jobPsyExamList.do" method="post" class="reset_area">
                                                     <input type="hidden" id="pageIndex" name="pageIndex" value="1">
                                                     <input type="hidden" id="pageUnit" name="pageUnit" value="6">
                                                     <table class="search_table">
@@ -264,7 +264,7 @@
                                                         <button type="reset" id="popBtnClean" class="btn medium type01 reset newbtn_reset newbtn_w88">초기화</button>
                                                         <button type="submit" id="srchBtn" class="btn medium fill type01 newbtn_w60">검색</button>
                                                     </div>
-                                                </form>
+                                                </div>
                                             </article>
 
                                             <div class="box_table_wrap">
