--- a/mobile/UI_ADHPChS04.html
+++ b/mobile/UI_ADHPChS04.html
@@ -29,7 +29,7 @@
                                 <button type="button" class="popup_close"><span class="blind">팝업 닫기</span></button>
                             </div>
 
-                            <div class="ncommitment_inner">
+                            <div class="commitment_inner">
                                 <h5 class="commitment_htit">재학생 맞춤형 고용서비스 점프업 프로젝트(Jump-Up) 참여 수당 관련 부정수급 방지 확약서</h5>
 
                                 <div class="commitment_list_wrap mt24">
@@ -46,7 +46,7 @@
                                     </ul>
                                 </div>
 
-                                <div class="commitment_list_wrap mt40">
+                                <div class="commitment_list_wrap">
                                     <p class="commitment_list_tit">부정(중복)수급 제외요건</p>
                                     <ul>
                                         <li>생계지원금</li>
@@ -59,7 +59,7 @@
                                     <p>위와 같이 부정수급에 대한 내용을 이해하였으며, 점프업(Jump-Up) 프로젝트에 성실하게 참여할 것을 약속합니다. 또한 부정수급 발생시 상기 민·형사상 책임(수당반환 및 추가징수, 형사처벌 등)을 감수할 것임을 <span class="txt_blue">확인</span>합니다.</p>
                                 </div>
 
-                                <div class="confirm_wrap mt24"><button type="button" class="btn big fill type01" onclick="">확인</button></div>
+                                <div class="confirm_wrap mt24"><button type="button" class="btn large fill type01" onclick="">확인</button></div>
                             </div>
                         </div>
                     </div>
