--- a/index_univ.html
+++ b/index_univ.html
@@ -728,10 +728,11 @@
                     <td>포인트신청관리(점프업)</td>
                     <td>부정수급 방지 확인서</td>
                     <td>UI_ADHPChS04</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPChS04.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPChS04.html" target="_blank">Mo</a>
                     </td>
                 </tr>
                 <tr>
