--- a/index_univ.html
+++ b/index_univ.html
@@ -259,6 +259,7 @@
                     <td>
                         <a href="./pc/UI_ADHPCdM01-1.html" target="_blank">PC-1</a>
                         <a href="./pc/UI_ADHPCdM01-2.html" target="_blank">PC-2</a>
+                        <a href="./mobile/UI_ADHPCdM01.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -274,6 +275,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCdS02.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCdS02.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -289,6 +291,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCdS03.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCdS03.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 
@@ -305,6 +308,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCdS04.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCdS04.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
