--- a/mobile/UI_ADHPCbS08.html
+++ b/mobile/UI_ADHPCbS08.html
@@ -38,19 +38,19 @@
                             <div class="box_group_wrap mt16">
                                 <h3 class="t2_sb">참여자 정보</h3>
                                 <div class="box_table_wrap top_linewrap">
-                                    <div class="dl_name">
+                                    <div>
                                         <div class="dt">성명</div>
                                         <div class="dd">홍길동</div>
                                     </div>
-                                    <div class="dl_tel">
+                                    <div>
                                         <div class="dt">전화번호</div>
                                         <div class="dd">010-0000-0000</div>
                                     </div>
-                                    <div class="dl_mail">
+                                    <div>
                                         <div class="dt">이메일</div>
                                         <div class="dd">email@mail.com</div>
                                     </div>
-                                    <div class="dl_addr">
+                                    <div>
                                         <div class="dt">주소</div>
                                         <div class="dd">(27740) 충청북도 음성군 맹동면 태정로 6 한국고용정보원</div>
                                     </div>
@@ -63,7 +63,7 @@
                             <div class="box_group_wrap">
                                 <h3 class="t2_sb">참여대학, 참여자 분류</h3>
                                 <div class="box_table_wrap top_linewrap">
-                                    <div class="dl_uni">
+                                    <div>
                                         <div class="dt req_mark">참여 대학</div>
                                         <div class="dd">
                                             <div class="box_table_group">
@@ -76,7 +76,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="dl_person">
+                                    <div>
                                         <div class="dt req_mark">참여자 분류</div>
                                         <div class="dd">
                                             <fieldset class="radio_filed">
@@ -104,7 +104,7 @@
                             <div class="box_group_wrap radio_view_wrap">
                                 <h3 class="t2_sb">학적 정보</h3>
                                 <div class="box_table_wrap top_linewrap">
-                                    <div class="dl_id">
+                                    <div>
                                         <div class="dt req_mark"><label for="studentId">학번<span class="blind"> 필수입력</span></label></div>
                                         <div class="dd">
                                             <span class="box_ipt new_ipt">
@@ -113,7 +113,7 @@
                                             </span>
                                         </div>
                                     </div>
-                                    <div class="dl_grade">
+                                    <div>
                                         <div class="dt req_mark"><label for="grade">학년<span class="blind"> 필수선택</span></label></div>
                                         <div class="dd">
                                             <select class="new_down" id="grade" name="grade" title="학년 선택" required>
@@ -126,7 +126,7 @@
                                             </select>
                                         </div>
                                     </div>
-                                    <div class="dl_major">
+                                    <div>
                                         <div class="dt req_mark"><label for="major">전공/학과<span class="blind"> 필수입력</span></label></div>
                                         <div class="dd dd_twincell">
                                             <div class="box_table_group">
@@ -148,7 +148,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="dl_status">
+                                    <div>
                                         <div class="dt req_mark"><label for="status">상태<span class="blind"> 필수입력</span></label></div>
                                         <div class="dd">
                                             <select class="new_down" id="status" name="status" title="학적 상태 선택" required>
@@ -167,7 +167,7 @@
                             <div class="box_group_wrap radio_view_wrap">
                                 <h3 class="t2_sb req_mark">참여 유형 선택</h3>
                                 <div class="box_table_wrap top_linewrap">
-                                    <div class="dl_person">
+                                    <div>
                                         <div class="dd">
                                             <fieldset class="radio_filed">
                                                 <legend class="sr_only">참여자 유형 선택</legend>
