--- a/mobile/UI_ADHPCbM09.html
+++ b/mobile/UI_ADHPCbM09.html
@@ -35,19 +35,19 @@
                             <div class="box_group_wrap">
                                 <h3 class="t2_sb">참여자 정보</h3>
                                 <div class="box_table_wrap top_linewrap">
-                                    <div class="dl_name">
+                                    <div>
                                         <div class="dt">성명</div>
                                         <div class="dd">홍길동</div>
                                     </div>
-                                    <div class="dl_tel">
+                                    <div>
                                         <div class="dt">전화번호</div>
                                         <div class="dd">010-0000-0000</div>
                                     </div>
-                                    <div class="dl_mail">
+                                    <div>
                                         <div class="dt">이메일</div>
                                         <div class="dd">email@mail.com</div>
                                     </div>
-                                    <div class="dl_addr">
+                                    <div>
                                         <div class="dt">주소</div>
                                         <div class="dd">(27740) 충청북도 음성군 맹동면 태정로 6 한국고용정보원</div>
                                     </div>
@@ -57,13 +57,13 @@
                             <div class="box_group_wrap">
                                 <h3 class="t2_sb">참여대학, 참여자 분류</h3>
                                 <div class="box_table_wrap top_linewrap">
-                                    <div class="dl_uni">
+                                    <div>
                                         <div class="dt"> 참여대학</div>
                                         <div class="dd">
                                             한국대학교
                                         </div>
                                     </div>
-                                    <div class="dl_person">
+                                    <div>
                                         <div class="dt">참여자 분류</div>
                                         <div class="dd">
                                             <fieldset class="radio_filed">
@@ -93,23 +93,23 @@
                             <div class="box_group_wrap radio_view_wrap">
                                 <h3 class="t2_sb">학적 정보</h3>
                                 <div class="box_table_wrap top_linewrap">
-                                    <div class="dl_id">
+                                    <div>
                                         <div class="dt">학번</div>
                                         <div class="dd">20250000</div>
                                     </div>
-                                    <div class="dl_grade">
+                                    <div>
                                         <div class="dt">학년</div>
                                         <div class="dd">
                                             1학년
                                         </div>
                                     </div>
-                                    <div class="dl_major">
+                                    <div>
                                         <div class="dt">전공/학과</div>
                                         <div class="dd dd_twincell">
                                             선택전공 / 선택학과
                                         </div>
                                     </div>
-                                    <div class="dl_status">
+                                    <div>
                                         <div class="dt">상태</div>
                                         <div class="dd">
                                             재학
@@ -121,7 +121,7 @@
                             <div class="box_group_wrap">
                                 <h3 class="t2_sb">참여 유형 선택</h3>
                                 <div class="box_table_wrap top_linewrap">
-                                    <div class="dl_person">
+                                    <div>
                                         <div class="dd">
                                             <fieldset class="radio_filed">
                                                 <legend class="sr_only">참여자 유형 선택</legend>
