--- a/index_univ.html
+++ b/index_univ.html
@@ -324,6 +324,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCdS05.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCdS05.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
