--- a/mobile/UI_ADHPCdS04.html
+++ b/mobile/UI_ADHPCdS04.html
@@ -23,6 +23,29 @@
             <div class="contents">
                 <div class="mypage">
                     <div class="progmg allcare">
+
+                        <!-- notice start -->
+                        <div class="top_notice">
+                            <i></i>
+                            <p><strong>제출완료</strong> : 경력개발로드맵이 확정되지 않은 상태로 ‘회수’ 후 수정이 가능합니다.</p>
+                            <button type="button" class="notice_expand ui-layer" data-my-layer="noticeLayer"><span class="blind">공지사항 열기</span></button>
+                        </div>
+                        <div class="bottom_layer type_title" tabindex="0" id="noticeLayer" style="z-index: 140; display: none;">
+                            <strong class="title">안내</strong>
+                            <div class="layer_contents" style="height: 216px;">
+                                <div class="notice_default">
+                                    <ul class="list_style">
+                                        <li><strong>제출완료</strong> : 경력개발로드맵이 확정되지 않은 상태로 ‘회수’ 후 수정이 가능합니다.</li>
+                                        <li><strong>승인완료</strong> : 승인된 경력개발로드맵은 수정이 불가능합니다.</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <button type="button" class="layer_close">
+                                <span class="blind">레이어 닫기</span>
+                            </button>
+                        </div>
+                        <!-- notice end -->
+                         
                         <div class="tab_menu custom_split" data-target="tabContentsId1">
                             <ul>
                                 <li><button type="button" aria-selected="false">참여신청서</button></li>
